--- a/requirements.txt
+++ b/requirements.txt
@@ -1,111 +1,21 @@
-absl-py 
-aiohttp 
-argon2-cffi 
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==3.0.1
-attrs 
-backcall 
-bleach 
-blinker==1.4
-brotlipy==0.7.0
-cachetools
-certifi==2020.12.5
-cffi 
-chardet
-click 
-colorama 
-coverage 
-cryptography 
-Cython 
-decorator 
-defusedxml 
-entrypoints==0.3
-Flask==2.0.1
-Flask-Cors==3.0.10
-gast==0.3.3
-google-auth 
-google-auth-oauthlib
-google-pasta==0.2.0
-grpcio 
-h5py==2.10.0
-idna
-importlib-metadata 
-ipykernel 
-ipython 
-ipython-genutils 
-itsdangerous==2.0.1
-jedi==0.17.0
-Jinja2==3.0.1
-joblib==1.0.1
-jsonschema 
-jupyter-client 
-jupyter-core 
-jupyterlab-pygments 
-Keras 
-Keras-Applications 
-Keras-Preprocessing
-Markdown
-MarkupSafe==2.0.1
-mistune 
-multidict 
-nbclient 
-nbconvert 
-nbformat 
-nest-asyncio
-notebook 
-numpy==1.18.5
-oauthlib==3.1.0
-opt-einsum==3.1.0
-packaging 
-pandas==1.2.4
-pandocfilters 
-parso 
-pickleshare 
-Pillow==8.2.0
-prometheus-client 
-prompt-toolkit 
-protobuf==3.14.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser 
-Pygments 
-PyJWT==1.7.1
-pyOpenSSL 
-pyparsing 
-pyreadline==2.1
-pyrsistent
-PySocks 
-python-dateutil 
-pytz==2021.1
-pywinpty==0.5.7
-PyYAML==5.4.1
-pyzmq==20.0.0
-requests
-requests-oauthlib==1.3.0
-rsa 
-scikit-learn==0.24.2
+appdirs==1.4.3
+certifi==2020.6.20
+click==7.1.2
+distlib==0.3.0
+Flask==1.1.2
+Flask-Cors==3.0.8
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.15.1
+MarkupSafe==1.1.1
+numpy==1.18.1
+pandas==1.0.1
+python-dateutil==2.8.1
+pytz==2019.3
+scikit-learn==0.22.1
 scipy==1.4.1
-Send2Trash 
-six 
-sklearn==0.0
-tensorboard 
-tensorboard-plugin-wit==1.6.0
-tensorflow==2.3.0
-tensorflow-estimator 
-termcolor==1.1.0
-terminado==0.9.4
-testpath 
-threadpoolctl==2.1.0
-tornado 
-traitlets 
-typing-extensions
-urllib3 
-wcwidth 
-webencodings==0.5.1
-Werkzeug==2.0.1
-win-inet-pton
+six==1.14.0
+virtualenv==20.0.7
+Werkzeug==1.0.1
 wincertstore==0.2
-wrapt==1.12.1
-yarl 
-zipp 
